cabal-version:      2.4
name:               adventofcode2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Max Petersen
maintainer:         maxvonpetersen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

data-files:
    input/day1.txt,
    input/day2.txt

library
    exposed-modules:
        Day1,
        Day2
    build-depends:
        base ^>=4.17.2.0,
        megaparsec ^>=9.3.0
    other-modules:
        Common.ArrayUtil
    hs-source-dirs: src
    default-language: GHC2021

executable adventofcode2023-exe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        adventofcode2023,
        base ^>=4.17.2.0,
        megaparsec ^>=9.3.0,
        text ^>=2.0.0
    other-modules:
        Paths_adventofcode2023
    
    hs-source-dirs:   app
    default-language: GHC2021