cabal-version:      2.4
name:               adventofcode2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Max Petersen
maintainer:         maxvonpetersen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

data-files:
    src/Python/Day3Part2.py,
    input/day1.txt,
    input/day2.txt,
    input/day3.txt,
    input/day4.txt,
    input/day5.txt,
    input/day6.txt,
    input/day7.txt,
    input/day8.txt,
    input/day9.txt,
    input/day10.txt,
    input/day11.txt,
    input/day12.txt

library
    exposed-modules:
        Day1,
        Day2,
        Day3,
        Day4,
        Day5,
        Day6,
        Day7,
        Day8,
        Day9,
        Day10,
        Day11,
        Day12
    build-depends:
        base ^>=4.17.2.0,
        containers ^>=0.6.7,
        megaparsec ^>=9.3.0,
        process ^>= 1.6.18.0
    other-modules:
        Common.ArrayUtil
        Common.ParseUtil
        Common.PyUtil
    hs-source-dirs: src
    default-language: GHC2021

executable adventofcode2023-exe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        adventofcode2023,
        base ^>= 4.17.2.0,
        containers ^>= 0.6.7
    other-modules:
        Paths_adventofcode2023
    
    hs-source-dirs:   app
    default-language: GHC2021